implemented minor fixes suggested by IDE